infra_modules/k8s/argocd_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: argocd-ingress
 annotations:
    # note: this annotation is only required if you've set 
    # REQUIRE_INGRESS_CLASS=true in the environment for 
    # the ingress deployment
    kubernetes.io/ingress.class: gloo
spec:
  rules:
  # - host: gloo.example.com
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: argocd-server
          servicePort: 8080
